# novnc-webrtc

./: .gitignore  .gitmodules  LICENCE  README.md
server/: Cargo.toml  test.html
server/src/: config.rs  main.rs  session.rs
webui_vanilla/: index.html  package-lock.json  package.json  vite.config.ts
webui_vanilla/src/: WebRTC.ts  main.ts  ui.js
webui_vite/: package-lock.json  package.json
webui_vite/src/: App.tsx  main.tsx
webui_vite/src/lib/: VncScreen.tsx  WebRTC.tsx  index.tsx
