[package]
name = "novnc-webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
env_logger = "0.9"
clap = "3.0"
hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
chrono = "0.4.23"
log = "0.4.16"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
lazy_static = "1.4"
rand = "0.8"
webrtc = "0.8.0"
